# bytemap

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHUNKING_3COLUMN_FIX.md  CHUNKING_CLEAN_TYPE_DISPLAY.md  CHUNKING_DECODER_PREVIEW.md  CHUNKING_EXTRA_HEADER_BYTES.md  CHUNKING_TYPE_CENTRIC.md  CHUNKING_UNIFIED_FRAMEWORK.md  COLOR_OVERRIDE_IMPLEMENTATION.md  PHASE7_STATUS.md  PR1_AGENT_WORKBENCH_SHELL.md  PR1_SHARED_YAML_BUFFER.md  PR2_UNIFIED_PARSING.md  PR2_WORKBENCH_STATE.md  PR3_SPECSTORE_INTEGRATION.md  PR4_PATCH_OPS_UI.md  PR5_RUNS_UI.md  PR6_EVIDENCE_INTEGRATION.md  PR7_DRAFT_PROMOTE_BRANCH.md  PR8_CHAT_INTERFACE.md  README.md  SPEC_ITERATION_GUIDE.md  TOOL_HOST_IMPLEMENTATION.md  TOOL_HOST_PHASE2.md  TOOL_HOST_PHASE3.md  TOOL_HOST_PHASE4.md  TOOL_HOST_PHASE5.md  TOOL_HOST_PHASE6.md  TOOL_HOST_QUICKSTART.md  TOOL_HOST_STATUS.md  VIEWPORT_IMPLEMENTATION_SUMMARY.md  WORKBENCH_USAGE.md  YAML_GRAMMAR_REFERENCE.md  debug_switch.py  demo_spec_iteration.py  demo_tool_host.py  find_pattern_change.py  investigate_length_pattern.py  parse_entire_file_mixed.py  (+7 more)
schema/: ftm.yaml
tests/: conftest.py  test_app_layout.py  test_app_smoke.py  test_array_shorthand.py  test_byte_strip.py  test_byte_strip_patterns.py  test_chunking.py  test_color_fallback.py  test_color_override.py  test_compare_selection_arrays_and_bytes.py  test_compare_strings_keys.py  test_compare_strings_modal.py  test_coverage.py  test_diff.py  test_diff_browser.py  test_dynamic_typedef.py  test_dynamic_typedef_comprehensive.py  test_endian_integration.py  test_frequency.py  test_incremental_spans.py  test_search.py  (+25 more)
(+56 files in other folders)
